# c-learning

./: .gitignore  CMakeLists.txt  README.md
01-intro/: hello.c  transChar.c
02-variable/: boolType.c  charType.c  dataTransfer.c  dataType.c  floatType.c  intType.c  variableDemo.c
03-const/: constDemo.c
04-operator/: arithmeticOperator.c  assignOperator.c  compareOperation.c  exercise.c  inputDemo.c  logicOperator.c  pointer.c  ternaryOperator.c
05-binary/: bitCalc.c
07-enum/: enumDemo1.c  enumDemo2.c  enumDemo3.c
08-function/: demo1.c  exercise1.c  exercise2.c  fibonacci.c  funcParam.c  functionDetail.c  monkeyExercise.c  myCalc.c  myCalc.h  staticVarDemo.c
