cmake_minimum_required(VERSION 3.17)
project(c_learning C)

set(CMAKE_C_STANDARD 90)

#add_executable(c_learning 01-intro/hello.c)
#add_executable(c_learning 02-variable/variableDemo.c)
#add_executable(c_learning 02-variable/dataType.c)
#add_executable(c_learning 02-variable/floatType.c)
#add_executable(c_learning 02-variable/charType.c)
#add_executable(c_learning 02-variable/boolType.c)
#add_executable(c_learning 02-variable/dataTransfer.c)
#add_executable(c_learning 03-const/constDemo.c)
#add_executable(c_learning 02-variable/inttype.c)
#add_executable(c_learning 02-variable/transchar.c)
#add_executable(c_learning 04-operator/pointer.c)
#add_executable(c_learning 04-operator/logicOperator.c)
#add_executable(c_learning 04-operator/assignOperator.c)
#add_executable(c_learning 04-operator/arithmeticOperator.c)
#add_executable(c_learning 04-operator/compareOperation.c)
#add_executable(c_learning 04-operator/assignOperator.c)
#add_executable(c_learning 04-operator/ternaryOperator.c)
#add_executable(c_learning 04-operator/inputDemo.c)
#add_executable(c_learning 04-operator/exercise.c)
#add_executable(c_learning 05-binary/bitCalc.c)
#add_executable(c_learning 07-enum/enumDemo1.c)
#add_executable(c_learning 07-enum/enumDemo2.c)
#add_executable(c_learning 07-enum/enumDemo3.c)
#add_executable(c_learning 08-function/demo1.c)
#add_executable(c_learning 08-function/myCalc.c)
#add_executable(c_learning 08-function/fibonacci.c)
#add_executable(c_learning 08-function/monkeyExercise.c)
#add_executable(c_learning 08-function/functionDetail.c)
#add_executable(c_learning 08-function/funcParam.c)
#add_executable(c_learning 08-function/exercise1.c)
#add_executable(c_learning 08-function/exercise2.c)
add_executable(c_learning 08-function/staticVarDemo.c)